Add hf/distilbert embeddings (refactor); Connect distilBERT model

--- a/llm_statbel/poc.ipynb
+++ b/llm_statbel/poc.ipynb
@@ -20,16 +20,14 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "import chromadb\n",
-    "\n",
-    "# Imports needed for similarity search improvement\n",
-    "from sklearn.preprocessing import normalize\n",
     "\n",
     "# Imports needed for vector store with huggingface\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "\n",
-    "# Imports needed for vector store with distilbert\n",
+    "# Imports needed for vector store/model predictions with distilbert\n",
     "from transformers import DistilBertTokenizer, DistilBertModel\n",
     "import torch"
    ]
@@ -37,69 +35,35 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "id": "xfMx26bI9UYC"
+   },
    "outputs": [],
    "source": [
-    "# Import data\n",
-    "df = pd.read_csv('input_data/soc_sample.csv', header=0)\n",
-    "df = df[df.iloc[:, 0].str.startswith('in the city of Halle')]"
+    "# Embedding function for Distilbert\n",
+    "tokenizer_distilbert = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')\n",
+    "model_distilbert = DistilBertModel.from_pretrained('distilbert-base-uncased')\n",
+    "\n",
+    "def create_embedding_distilbert(text):\n",
+    "    # Tokenize input text\n",
+    "    inputs = tokenizer_distilbert(text, return_tensors='pt', padding=True, truncation=True)\n",
+    "    # Get model outputs\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model_distilbert(**inputs)\n",
+    "    # Take the mean of the last hidden state to get the sentence embedding\n",
+    "    return outputs.last_hidden_state.mean(dim=1).squeeze().numpy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "id": "xfMx26bI9UYC"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                    text  \\\n",
-      "87953  in the city of Halle the number of females bor...   \n",
-      "\n",
-      "                                  embeddings_huggingface  \\\n",
-      "87953  [-0.01284471619874239, 0.026470182463526726, 0...   \n",
-      "\n",
-      "                       embeddings_huggingface_normalized  \\\n",
-      "87953  [-0.012844716066090781, 0.026470182190160445, ...   \n",
-      "\n",
-      "                                   embeddings_distilbert  \n",
-      "87953  [-0.13163061, -0.038754307, 0.14012174, -0.263...  \n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Add different embeddings to the df\n",
+    "client = chromadb.PersistentClient(path=\".\")\n",
     "\n",
-    "# Huggingface\n",
-    "huggingface_embeddings_model = HuggingFaceEmbeddings()\n",
-    "df['embeddings_huggingface'] = df['text'].apply(lambda x: huggingface_embeddings_model.embed_query(x))\n",
-    "df['embeddings_huggingface_normalized'] = df['embeddings_huggingface'].apply(\n",
-    "    lambda emb: normalize([emb], axis=1).flatten().tolist()\n",
-    ")\n",
-    "\n",
-    "# DistilBERT\n",
-    "tokenizer = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')\n",
-    "model = DistilBertModel.from_pretrained('distilbert-base-uncased')\n",
-    "\n",
-    "# Function to create embeddings\n",
-    "def create_embedding(text):\n",
-    "    # Tokenize input text\n",
-    "    inputs = tokenizer(text, return_tensors='pt', padding=True, truncation=True)\n",
-    "    # Get model outputs\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(**inputs)\n",
-    "    # Take the mean of the last hidden state to get the sentence embedding\n",
-    "    return outputs.last_hidden_state.mean(dim=1).squeeze().numpy()\n",
-    "\n",
-    "# Apply the embedding function to the 'text' column\n",
-    "df['embeddings_distilbert'] = df['text'].apply(lambda x: create_embedding(x))\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(df.head(1))"
+    "collection_hf = client.get_or_create_collection(\"statbel_hf\")\n",
+    "collection_distilbert = client.get_or_create_collection(\"statbel_distilbert\")"
    ]
   },
   {
@@ -108,102 +72,158 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = chromadb.Client()"
+    "# Make vector store statbel_huggingface with unnormalized huggingface embedding\n",
+    "chroma_db_path = \"./chroma.sqlite3\"\n",
+    "hf_embeddings_model = HuggingFaceEmbeddings()\n",
+    "\n",
+    "\n",
+    "# Check if the ChromaDB file exists. If not, build it\n",
+    "if not os.path.exists(chroma_db_path):\n",
+    "    # Load the context data\n",
+    "    df = pd.read_csv('input_data/soc_sample.csv', header=0)\n",
+    "    df = df[df.iloc[:, 0].str.startswith('in the city of Halle')]\n",
+    "\n",
+    "\n",
+    "    # Huggingface embeddings\n",
+    "    df['embeddings_hf'] = df['text'].apply(lambda x: hf_embeddings_model.embed_query(x))\n",
+    "    \n",
+    "    # DistilBERT embeddings\n",
+    "    df['embeddings_distilbert'] = df['text'].apply(lambda x: create_embedding_distilbert(x))\n",
+    "\n",
+    "    ids = [str(index) for index in df.index]  # Convert index to string for IDs\n",
+    "\n",
+    "    collection_hf = client.get_or_create_collection(name=\"statbel_hf\")\n",
+    "    collection_hf.add(\n",
+    "        ids=ids,  # Unique identifiers for each document\n",
+    "        documents=df['text'].tolist(), \n",
+    "        embeddings=df['embeddings_hf'].tolist(),\n",
+    "        metadatas=[{\"index\": index} for index in df.index]  # Optional metadata\n",
+    "        )\n",
+    "    \n",
+    "    # Make vector store statbel_distilbert with unnormalized distilbert embedding\n",
+    "    collection_distilbert = client.get_or_create_collection(name=\"statbel_distilbert\")\n",
+    "    collection_distilbert.add(\n",
+    "        ids=ids,  # Unique identifiers for each document\n",
+    "        documents=df['text'].tolist(),  # The text you want to store\n",
+    "        embeddings=df['embeddings_distilbert'].tolist(),  # The corresponding embeddings\n",
+    "        metadatas=[{\"index\": index} for index in df.index]  # Optional metadata\n",
+    "        )\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huggingface:\n",
+      "in the city of Halle the number of males born in bel unmarried and age 52 is 75\n",
+      "in the city of Halle the number of males born in bel unmarried and age 65 is 30\n",
+      "in the city of Halle the number of males born in bel unmarried and age 53 is 80\n",
+      "in the city of Halle the number of males born in bel unmarried and age 49 is 78\n",
+      "in the city of Halle the number of males born in bel unmarried and age 50 is 87\n",
+      "in the city of Halle the number of males born in bel unmarried and age 59 is 47\n",
+      "in the city of Halle the number of males born in bel unmarried and age 63 is 30\n",
+      "in the city of Halle the number of males born in bel unmarried and age 51 is 69\n",
+      "in the city of Halle the number of males born in bel unmarried and age 47 is 78\n",
+      "in the city of Halle the number of males born in bel unmarried and age 60 is 37\n",
+      "\n",
+      "distilbert:\n",
+      "in the city of Halle the number of males born in bel unmarried and age 65 is 30\n",
+      "in the city of Halle the number of males born in bel unmarried and age 61 is 40\n",
+      "in the city of Halle the number of males born in bel unmarried and age 60 is 37\n",
+      "in the city of Halle the number of males born in bel divorced and age 65 is 31\n",
+      "in the city of Halle the number of males born in bel widow and age 70 is 8\n",
+      "in the city of Halle the number of males born in bel married and age 82 is 50\n",
+      "in the city of Halle the number of males born in bel widow and age 65 is 9\n",
+      "in the city of Halle the number of males born in bel married and age 65 is 120\n",
+      "in the city of Halle the number of males born in bel divorced and age 60 is 45\n",
+      "in the city of Halle the number of males born in bel widow and age 66 is 10\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Make vector store statbel_huggingface with unnormalized huggingface embedding\n",
-    "\n",
-    "ids = [str(index) for index in df.index]  # Convert index to string for IDs\n",
-    "\n",
-    "collection_huggingface = client.create_collection(name=\"statbel_huggingface\")\n",
-    "collection_huggingface.add(\n",
-    "    ids=ids,  # Unique identifiers for each document\n",
-    "    documents=df['text'].tolist(), \n",
-    "    embeddings=df['embeddings_huggingface'].tolist(),\n",
-    "    metadatas=[{\"index\": index} for index in df.index]  # Optional metadata\n",
-    "    )\n",
+    "# Start asking some questions ..\n",
+    "query = \"in the city of Halle how many males of age 65 which are born in bel and married?\"\n",
+    "query = \"in the city of Halle how many males of age 65 are there\"\n",
     "\n",
     "\n",
-    "collection_huggingface_norm = client.create_collection(name=\"statbel_huggingface_norm\")\n",
-    "collection_huggingface_norm.add(\n",
-    "    ids=ids,  # Unique identifiers for each document\n",
-    "    documents=df['text'].tolist(), \n",
-    "    embeddings=df['embeddings_huggingface_normalized'].tolist(),\n",
-    "    metadatas=[{\"index\": index} for index in df.index]  # Optional metadata\n",
-    "    )\n",
+    "def get_context(query, model):\n",
+    "    if model == 'huggingface':\n",
+    "        query_embedding = hf_embeddings_model.embed_query(query)\n",
+    "        results = collection_hf.query(\n",
+    "                                      query_embeddings=[query_embedding],  \n",
+    "                                      n_results=10\n",
+    "                                     )\n",
+    "    elif model == 'distilbert':\n",
+    "        query_embedding = create_embedding_distilbert(query)\n",
+    "        results = collection_distilbert.query(\n",
+    "                                              query_embeddings=[query_embedding],\n",
+    "                                              n_results=10\n",
+    "                                             ) \n",
+    "        \n",
+    "    context = \"\\n\".join(results['documents'][0])\n",
+    "    print(f'{model}:\\n{context}\\n')\n",
+    "    return context\n",
     "\n",
-    "\n",
-    "# Make vector store statbel_distilbert with unnormalized distilbert embedding\n",
-    "collection_distilbert = client.create_collection(name=\"statbel_distilbert\")\n",
-    "collection_distilbert.add(\n",
-    "    ids=ids,  # Unique identifiers for each document\n",
-    "    documents=df['text'].tolist(),  # The text you want to store\n",
-    "    embeddings=df['embeddings_distilbert'].tolist(),  # The corresponding embeddings\n",
-    "    metadatas=[{\"index\": index} for index in df.index]  # Optional metadata\n",
-    "    )\n",
-    "\n"
+    "context_hf = get_context(query, 'huggingface')\n",
+    "context_distilbert = get_context(query, 'distilbert')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ids': [['88788', '88714']], 'embeddings': None, 'documents': [['in the city of Halle the number of males born in bel not married and age 65 is 30', 'in the city of Halle the number of males born in bel not married and age 64 is 29']], 'uris': None, 'data': None, 'metadatas': [[{'index': 88788}, {'index': 88714}]], 'distances': [[0.7273622751235962, 0.7450776100158691]], 'included': [<IncludeEnum.distances: 'distances'>, <IncludeEnum.documents: 'documents'>, <IncludeEnum.metadatas: 'metadatas'>]}\n",
-      "---------\n",
-      "{'ids': [['88788', '88714']], 'embeddings': None, 'documents': [['in the city of Halle the number of males born in bel not married and age 65 is 30', 'in the city of Halle the number of males born in bel not married and age 64 is 29']], 'uris': None, 'data': None, 'metadatas': [[{'index': 88788}, {'index': 88714}]], 'distances': [[0.7273622751235962, 0.7450776100158691]], 'included': [<IncludeEnum.distances: 'distances'>, <IncludeEnum.documents: 'documents'>, <IncludeEnum.metadatas: 'metadatas'>]}\n",
-      "---------\n",
-      "{'ids': [['88771', '88068']], 'embeddings': None, 'documents': [['in the city of Halle the number of males born in bel not married and age 20 is 193', 'in the city of Halle the number of males born in bel married and age 30 is 51']], 'uris': None, 'data': None, 'metadatas': [[{'index': 88771}, {'index': 88068}]], 'distances': [[24.60370445251465, 24.660888671875]], 'included': [<IncludeEnum.distances: 'distances'>, <IncludeEnum.documents: 'documents'>, <IncludeEnum.metadatas: 'metadatas'>]}\n"
+      "Answer: 30\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "# Start asking some questions ..\n",
-    "query_text = \"Let's have a look at all males of age 30 that are married and born in bel. How many are there? Please make sure you get this right: their age has to be 30.\"\n",
+    "from transformers import DistilBertForQuestionAnswering\n",
     "\n",
-    "# Generate embeddings for the query\n",
-    "query_embedding_huggingface = huggingface_embeddings_model.embed_query(query_text)\n",
-    "query_embedding_huggingface_normalized = normalize(np.array(query_embedding_huggingface).reshape(1, -1), axis=1).flatten()\n",
-    "query_embedding_distilbert = create_embedding(query_text)\n",
+    "# Get the model's predictions\n",
+    "inputs = tokenizer_distilbert(query, context_hf, return_tensors='pt', padding=True, truncation=True)\n",
+    "model = DistilBertForQuestionAnswering.from_pretrained('distilbert-base-uncased-distilled-squad')\n",
     "\n",
     "\n",
-    "\n",
-    "# Perform a similarity search for unnormalized huggingface embedding\n",
-    "results_huggingface = collection_huggingface.query(\n",
-    "    query_embeddings=[query_embedding_huggingface],  \n",
-    "    n_results=2\n",
-    ")\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
     "\n",
     "\n",
-    "# Perform a similarity search for normalized huggingface embedding\n",
-    "results_huggingface_norm = collection_huggingface.query(\n",
-    "    query_embeddings=[query_embedding_huggingface_normalized],  \n",
-    "    n_results=2\n",
-    ")\n",
+    "# Get the start and end scores\n",
+    "start_scores = outputs.start_logits\n",
+    "end_scores = outputs.end_logits\n",
     "\n",
-    "# Perform a similarity search for distilbert tokenizer\n",
-    "results_distilbert = collection_distilbert.query(\n",
-    "    query_embeddings=[query_embedding_distilbert],  # The embedding of your query\n",
-    "    n_results=2  # Number of results to retrieve\n",
-    ")\n",
     "\n",
-    "print(results_huggingface)\n",
-    "print('---------')\n",
-    "print(results_huggingface_norm)\n",
-    "print('---------')\n",
-    "print(results_distilbert)"
+    "# Get the most likely start and end of the answer\n",
+    "start_index = torch.argmax(start_scores)\n",
+    "end_index = torch.argmax(end_scores) + 1  # +1 because the end index is inclusive\n",
+    "\n",
+    "\n",
+    "# Decode the answer\n",
+    "answer_tokens = inputs['input_ids'][0][start_index:end_index]\n",
+    "answer = tokenizer_distilbert.decode(answer_tokens)\n",
+    "\n",
+    "\n",
+    "print(\"Answer:\", answer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
