Add recreate_vectorstore param instead of checking if chromadb exists; Remove colab cell

--- a/llm_statbel/poc.ipynb
+++ b/llm_statbel/poc.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/rabbitmetrics/cx-analytics/blob/main/notebooks/cx-analytics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -73,12 +63,12 @@
    "outputs": [],
    "source": [
     "# Make vector store statbel_huggingface with unnormalized huggingface embedding\n",
-    "chroma_db_path = \"./chroma.sqlite3\"\n",
     "hf_embeddings_model = HuggingFaceEmbeddings()\n",
     "\n",
+    "recreate_vectorstore = 0\n",
     "\n",
     "# Check if the ChromaDB file exists. If not, build it\n",
-    "if not os.path.exists(chroma_db_path):\n",
+    "if recreate_vectorstore:\n",
     "    # Load the context data\n",
     "    df = pd.read_csv('input_data/soc_sample.csv', header=0)\n",
     "    df = df[df.iloc[:, 0].str.startswith('in the city of Halle')]\n",
@@ -107,8 +97,7 @@
     "        documents=df['text'].tolist(),  # The text you want to store\n",
     "        embeddings=df['embeddings_distilbert'].tolist(),  # The corresponding embeddings\n",
     "        metadatas=[{\"index\": index} for index in df.index]  # Optional metadata\n",
-    "        )\n",
-    "\n"
+    "        )"
    ]
   },
   {
