Small cleanup of prompts

--- a/llm_statbel/poc.ipynb
+++ b/llm_statbel/poc.ipynb
@@ -110,28 +110,28 @@
      "output_type": "stream",
      "text": [
       "huggingface:\n",
-      "in the city of Halle the number of males born in bel unmarried and age 52 is 75\n",
+      "in the city of Halle the number of males born in bel married and age 89 is 25\n",
+      "in the city of Halle the number of males born in bel married and age 90 is 19\n",
+      "in the city of Halle the number of males born in bel married and age 65 is 120\n",
+      "in the city of Halle the number of males born in bel married and age 85 is 57\n",
+      "in the city of Halle the number of males born in bel married and age 82 is 50\n",
+      "in the city of Halle the number of males born in bel married and age 35 is 77\n",
+      "in the city of Halle the number of males born in bel married and age 81 is 75\n",
+      "in the city of Halle the number of males born in bel married and age 34 is 71\n",
       "in the city of Halle the number of males born in bel unmarried and age 65 is 30\n",
-      "in the city of Halle the number of males born in bel unmarried and age 53 is 80\n",
-      "in the city of Halle the number of males born in bel unmarried and age 49 is 78\n",
-      "in the city of Halle the number of males born in bel unmarried and age 50 is 87\n",
-      "in the city of Halle the number of males born in bel unmarried and age 59 is 47\n",
-      "in the city of Halle the number of males born in bel unmarried and age 63 is 30\n",
-      "in the city of Halle the number of males born in bel unmarried and age 51 is 69\n",
-      "in the city of Halle the number of males born in bel unmarried and age 47 is 78\n",
-      "in the city of Halle the number of males born in bel unmarried and age 60 is 37\n",
+      "in the city of Halle the number of males born in bel married and age 32 is 74\n",
       "\n",
       "distilbert:\n",
       "in the city of Halle the number of males born in bel unmarried and age 65 is 30\n",
-      "in the city of Halle the number of males born in bel unmarried and age 61 is 40\n",
-      "in the city of Halle the number of males born in bel unmarried and age 60 is 37\n",
-      "in the city of Halle the number of males born in bel divorced and age 65 is 31\n",
-      "in the city of Halle the number of males born in bel widow and age 70 is 8\n",
-      "in the city of Halle the number of males born in bel married and age 82 is 50\n",
-      "in the city of Halle the number of males born in bel widow and age 65 is 9\n",
-      "in the city of Halle the number of males born in bel married and age 65 is 120\n",
       "in the city of Halle the number of males born in bel divorced and age 60 is 45\n",
-      "in the city of Halle the number of males born in bel widow and age 66 is 10\n",
+      "in the city of Halle the number of males born in bel unmarried and age 60 is 37\n",
+      "in the city of Halle the number of males born in bel married and age 30 is 51\n",
+      "in the city of Halle the number of males born in bel unmarried and age 61 is 40\n",
+      "in the city of Halle the number of males born in bel unmarried and age 55 is 61\n",
+      "in the city of Halle the number of males born in bel unmarried and age 63 is 30\n",
+      "in the city of Halle the number of males born in bel unmarried and age 30 is 188\n",
+      "in the city of Halle the number of males born in bel divorced and age 50 is 23\n",
+      "in the city of Halle the number of males born in bel unmarried and age 25 is 200\n",
       "\n"
      ]
     }
@@ -139,8 +139,6 @@
    "source": [
     "# Start asking some questions ..\n",
     "query = \"in the city of Halle how many males of age 65 which are born in bel and married?\"\n",
-    "query = \"in the city of Halle how many males of age 65 are there\"\n",
-    "\n",
     "\n",
     "def get_context(query, model):\n",
     "    if model == 'huggingface':\n",
@@ -157,7 +155,7 @@
     "                                             ) \n",
     "        \n",
     "    context = \"\\n\".join(results['documents'][0])\n",
-    "    print(f'{model}:\\n{context}\\n')\n",
+    "    print(f'{model} context:\\n{context}\\n')\n",
     "    return context\n",
     "\n",
     "context_hf = get_context(query, 'huggingface')\n",
@@ -173,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer: 30\n"
+      "Answer: 120\n"
      ]
     }
    ],
